--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <p><strong>Party:</strong> December 14, 2024, from 12 PM</p>
   <p class="location"><strong>Location:</strong> Ongata Rongai</p>
   <p>Don't miss out on this joyful occasion!</p>
-  <button onclick="celebrate()">Celebrate with Us!</button>
+  <button onclick="celebrate()">CLick to Celebrate with Us!</button>
 
   <script>
     // Generate confetti
