--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <h1>You're Invited!</h1>
   <p>Join us to celebrate the graduation of <strong>Fredrick Omondi Oluoch</strong></p>
   <p>Kenya School of TVET - Gigiri Class of 2024</p>
-  <p><strong>Graduation Ceremony:</strong> December 10, 2024, 8 AM</p>
+  <p><strong>Graduation Ceremony</strong></p>
   <p><strong>Venue:</strong> School Grounds, Gigiri, Nairobi</p>
   <p><strong>Party:</strong> December 14, 2024, from 12 PM</p>
   <p class="location"><strong>Location:</strong> Ongata Rongai</p>
